@@ -47,7 +47,7 @@ ARCHPICFLAGS		= -fpic
 ARCHWARNINGS		= -Wall -Wstrict-prototypes -Wshadow
 ARCHDEFINES		=
 ARCHINCLUDES		= -I. -isystem $(TOPDIR)/include
-ARCHSCRIPT		= -T$(TOPDIR)/configs/ntosd-dm320/ld.script
+ARCHSCRIPT		= -T$(TOPDIR)/configs/$(CONFIG_BOARD)/ld.script
 
 CROSSDEV		= arm-elf-
 CC			= $(CROSSDEV)gcc
